test-suite/tests/ui/non-display-member.stderr
error[E0277]: the trait bound `&Vec<u8>: cli_table::Cell` is not satisfied
 --> tests/ui/non-display-member.rs:6:5
  |
4 |   #[derive(Table)]
  |            ----- required by a bound introduced by this call
5 |   struct Test {
6 | /     #[table(title = "a")]
7 | |     a: Vec<u8>,
  | |______________^ the trait `std::fmt::Display` is not implemented for `Vec<u8>`
  |
  = help: the trait `cli_table::Cell` is implemented for `CellStruct`
  = note: required for `&Vec<u8>` to implement `std::fmt::Display`
  = note: required for `&Vec<u8>` to implement `cli_table::Cell`
